--- a/static/style.css
+++ b/static/style.css
@@ -25,6 +25,7 @@ body {
   line-height: 1.5;
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
+  background: linear-gradient(135deg, #fafcfd, #e0e0e0, #dedede);
 }
 
 img,
@@ -87,8 +88,7 @@ header {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: linear-gradient(135deg, #fafcfd, #e0e0e0, #dedede);
-  overflow-x: hidden;
+  overflow: hidden;
 
   view-timeline-name: --headerView;
   view-timeline-axis: block;
@@ -101,21 +101,22 @@ header {
   width: 150px;
   height: 50px;
 }
-#header-title {
+.title{
   position: absolute;
   font-family: poppins;
   font-size: 3rem;
   font-weight: 700;
-  color: #f6fbfc;
   text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  color: #f6fbfc;
 }
-#header-tagline{
-    position: absolute;
-    font-family: poppins;
-    color: #919596;
-    text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.2);
-    transform: translateY(50px);
+
+#header-tagline {
+  position: absolute;
+  font-family: poppins;
+  color: #919596;
+  text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.2);
+  transform: translateY(50px);
 }
 .social-links {
   position: absolute;
@@ -143,22 +144,48 @@ header {
 .social-links img {
   width: 24px;
 }
-
-main {
+/* Section 1 */
+.the-beginning-section {
   position: relative;
   z-index: 2;
-  background: url(./images/header/skyline.png);
-  background-repeat: no-repeat;
-  background-position: center;
   padding: 30px;
+  width: 100%;
   height: 100vh;
+  overflow: hidden;
+  
+  border: 1px solid;
+  display: flex;
+}
+
+.cloud {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  object-fit: contain;
+  z-index: 1;
+  animation: vibrate 2s infinite linear alternate forwards;
+}
+
+.sky-bg {
+  width: 100vw;
+  position: absolute;
+  height: 10px;
+  background: #fff;
+  bottom: 0;
+  right: 0;
+}
+@keyframes vibrate {
+  to {
+    transform: scale(1.03) translateX(10px);
+  }
 }
 
 @media (max-width: 780px) {
   nav p {
     text-align: center;
   }
-  #header-title, #header-tagline {
+  #header-title,
+  #header-tagline {
     padding: 0 30px 0 30px;
   }
   .social-links {
@@ -168,7 +195,14 @@ main {
     height: 30px;
     padding: 0;
   }
-  #header-tagline{
+  #header-tagline {
     transform: translateY(220px);
+  }
+}
+
+@media (max-width: 480px){
+  .the-beginning-title{
+    font-size: 2rem;
+    padding-left: 20px;
   }
 }
