--- a/static/animation.css
+++ b/static/animation.css
@@ -1,11 +1,86 @@
+@property --angle {
+  syntax: "<angle>";
+  initial-value: 0deg;
+  inherits: false;
+}
+
 @keyframes fadeOutLinks {
   to {
     opacity: 0;
   }
 }
 
-@keyframes vibrate {
+@keyframes appear {
+  from {
+    opacity: 0;
+    scale: 0.5;
+    transform: translateX(-100px);
+    clip-path: inset(100% 100% 0 0);
+  }
   to {
-    transform: scale(1.03) translateX(10px);
+    opacity: 1;
+    transform: translateX(0);
+    scale: 1;
+    clip-path: inset(0 0 0 0);
+  }
+}
+
+@keyframes movingBorder {
+  from {
+    --angle: 0deg;
+  }
+  to {
+    --angle: 360deg;
+  }
+}
+@keyframes TextAppear {
+  from {
+    opacity: 0;
+    scale: 0.5;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    scale: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes moveBg {
+  from {
+    background-position: 0% bottom;
+  }
+  to {
+    background-position: -2000px bottom;
+  }
+}
+
+@keyframes imageReveal {
+  from {
+    filter: saturate(0) contrast(4) brightness(0.1) blur(5px);
+    opacity: 0;
+    translate: 0 4rem;
+  }
+  to {
+    filter: none;
+    opacity: 1;
+    translate: 0 0;
+  }
+}
+
+@keyframes lineGrowDown{
+  from{
+    height: 0px;
+  }
+  to{
+    height: 100%;
+  }
+}
+@keyframes lineGrowUp{
+  from{
+    height: 36%;
+  }
+  to{
+    height: 100%;
   }
 }
