--- a/static/responsive.css
+++ b/static/responsive.css
@@ -5,11 +5,8 @@
 }
 
 @media (max-width: 780px) {
-  nav p {
-    text-align: center;
-  }
-  #header-title,
-  #header-tagline {
+  #section1-title,
+  #section1-tagline {
     padding: 0 30px 0 30px;
   }
   .social-links {
@@ -19,14 +16,20 @@
     height: 30px;
     padding: 0;
   }
-  #header-tagline {
+  #section1-tagline {
     transform: translateY(220px);
   }
 }
 
 @media (max-width: 480px){
-  .the-beginning-title{
+  #section2-title{
     font-size: 2rem;
     padding-left: 20px;
+  }
+  #section2-content-text{
+    font-size: 1rem;
+  }
+  .line1{
+    transform: translateX(100px);
   }
 }
