feat(Section3-The Struggles): Implement Section 3

--- a/static/animation.css
+++ b/static/animation.css
@@ -84,3 +84,45 @@
     height: 100%;
   }
 }
+
+@keyframes fadeOut{
+  from{
+    filter: opacity(1);
+  }
+  to{
+    filter: opacity(0);
+  }
+}
+@keyframes fadeIn{
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
+}
+
+
+@keyframes gradientShift{
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes floaty {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(-20px);
+  }
+}
