--- a/static/responsive.css
+++ b/static/responsive.css
@@ -3,6 +3,20 @@
     interpolate-size: allow-keywords;
   }
 }
+@media (max-width: 900px) {
+  .struggles-content {
+    flex-direction: column;
+    align-items: center;
+    padding: 4rem 5vw;
+    text-align: center;
+  }
+  .narrative-card {
+    max-width: 90%;
+  }
+  .card {
+    display: none;
+  } /* hide on mobile for simplicity */
+}
 
 @media (max-width: 780px) {
   #section1-title,
@@ -22,7 +36,7 @@
 }
 
 @media (max-width: 480px){
-  #section2-title{
+  #section2-title, #section3-title{
     font-size: 2rem;
     padding-left: 20px;
   }
