--- a/static/responsive.css
+++ b/static/responsive.css
@@ -36,14 +36,22 @@
 }
 
 @media (max-width: 480px){
-  #section2-title, #section3-title{
-    font-size: 2rem;
+  #section2-title{
     padding-left: 20px;
   }
-  #section2-content-text{
+  #section2-title, #section3-title, #section4-title{
+    font-size: 2rem;
+  }
+  .narrative-card-text{
     font-size: 1rem;
   }
-  .line1{
-    transform: translateX(100px);
+  #section2-narrative-card{
+    right: 5%;
+  }
+  .decoration-line-red {
+    transform: translateX(90px) translateY(-250px);
+  }
+  .decoration-line-blue{
+    transform: translateX(-110px) translateY(-5px);
   }
 }
