--- a/static/style.css
+++ b/static/style.css
@@ -29,6 +29,9 @@ body {
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   background: linear-gradient(135deg, #fafcfd, #e0e0e0, #dedede);
+  font-family: poppins, monospace, system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
 }
 
 img,
@@ -74,6 +77,64 @@ h6 {
 #__next {
   isolation: isolate;
 }
+/* Global */
+.section {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 30px;
+  width: 100%;
+  height: 100vh;
+  z-index: 2;
+}
+.section-heading {
+  align-self: flex-start;
+  margin-bottom: auto;
+
+  animation: appear 1ms linear;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
+}
+.title {
+  text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.5);
+}
+/* the narrative card */
+.narrative-card {
+  max-width: 520px;
+  background: rgba(6, 12, 30, 1);
+  box-shadow: 2px 4px 4px rgba(2, 6, 20, 0.6);
+  line-height: 1.6;
+  letter-spacing: 0.1px;
+  align-self: flex-end;
+
+  position: absolute;
+  bottom: 15%;
+  right: 5vw;
+
+  animation: TextAppear both;
+  animation-timeline: view();
+  animation-range: entry 20% cover 30%;
+}
+.narrative-card-text {
+  padding: 1rem;
+  color: #000000;
+  font-size: 1.2rem;
+  border-radius: 7px;
+  background-color: #ffffff;
+  text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
+}
+.narrative-card-text::after {
+  content: "";
+  position: absolute;
+  inset: -2px;
+  background: conic-gradient(from var(--angle), #ffffff, #000000, #ffffff);
+  border-radius: 7px;
+  z-index: -1;
+  animation: movingBorder 3s linear infinite;
+}
 /* Header / Section 1 */
 #logo {
   font-family: poppins;
@@ -85,13 +146,7 @@ h6 {
   padding: 30px;
   text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.2);
 }
-.section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
-}
+
 header {
   position: relative;
 
@@ -119,7 +174,6 @@ header {
 }
 #section1-tagline {
   position: absolute;
-  font-family: poppins;
   color: #919596;
   text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.2);
   transform: translateY(50px);
@@ -154,11 +208,7 @@ header {
 }
 /* Section 2 */
 #section2 {
-  padding: 30px;
-  flex-direction: column;
-  z-index: 2;
-
-  background: url(./images/section2/cloud.png) repeat-x;
+  /* background: url(./images/section2/cloud.png) repeat-x; */
   background-position: 0 bottom;
   background-size: auto 350px;
 
@@ -170,74 +220,35 @@ header {
   animation-timeline: auto, view();
   animation-range: normal, entry 100% cover 90%;
 }
-#section2-title,
-#section3-heading {
-  align-self: flex-start;
-  margin-bottom: auto;
-  text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.5);
-
-  animation: appear 1ms linear;
-  animation-timeline: view();
-  animation-range: entry 0% cover 40%;
-}
-
-#section2-content {
-  max-width: 50vw;
-  align-self: flex-end;
-  margin-bottom: 40vh;
-  margin-right: 2vw;
-
-  animation: TextAppear both;
-  animation-timeline: view();
-  animation-range: entry 20% cover 30%;
-}
-
-#section2-content-text {
-  font-family: poppins;
-  color: #646464;
-  font-weight: 500;
-  font-size: 1.2rem;
-  text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
-
-  background-color: #ffffff;
-  border-radius: 7px;
-  padding: 1rem;
-}
-
-#section2-content-text::after {
-  content: "";
+#section2-narrative-card {
   position: absolute;
-  inset: -2px;
-  background: conic-gradient(from var(--angle), #ffffff, #7a7a7a, #ffffff);
-  border-radius: 7px;
-  z-index: -1;
-  animation: movingBorder 3s linear infinite;
+  right: 10%;
+  bottom: 25%;
 }
-.line {
+.decoration-line {
   height: 100px;
-  position: relative;
+  position: absolute;
 }
-.line1 {
-  transform: translateX(-310px);
+.decoration-line-red {
+  transform: translateX(-310px) translateY(-150px);
 }
-.line2 {
-  transform: translateY(-10px);
+.decoration-line-blue {
+  transform: translateX(50px) translateY(-45px);
 }
-.line::after {
+.decoration-line::after {
   content: "";
   position: absolute;
   left: 0;
   width: 2px;
 }
-.line1::after {
+.decoration-line-red::after {
   top: 0;
   background: red;
   animation: lineGrowDown linear both;
   animation-range: entry 0% cover 50%;
   animation-timeline: view();
 }
-.line2::after {
+.decoration-line-blue::after {
   bottom: 0;
   background: blue;
   animation: lineGrowUp linear both;
@@ -254,12 +265,13 @@ header {
 
   background-position: bottom;
   background-size: cover;
+
   animation: fadeIn linear both;
   animation-timeline: view();
   animation-range: entry 0% cover 30%;
 }
 
-#section3::after {
+/* #section3::after {
   content: "";
   position: absolute;
   top: 0;
@@ -279,7 +291,7 @@ header {
 
   pointer-events: none;
   z-index: 1;
-}
+} */
 #section3-content {
   position: absolute;
   padding: 30px;
@@ -301,50 +313,6 @@ header {
   color: #ffffff;
 }
 
-/* the narrative card */
-.narrative-card {
-  max-width: 520px;
-  background: rgba(6, 12, 30, 1);
-  box-shadow: 2px 4px 4px rgba(2, 6, 20, 0.6);
-  font-family: "Poppins", system-ui, sans-serif;
-  line-height: 1.6;
-  letter-spacing: 0.1px;
-  align-self: flex-end;
-
-  position: absolute;
-  bottom: 15%;
-  right: 5vw;
-
-  animation: TextAppear both;
-  animation-timeline: view();
-  animation-range: entry 20% cover 30%;
-}
-
-/* narrative text styling */
-.narrative-line {
-  background: rgba(6, 12, 30, 1);
-  border-radius: 12px;
-  /* margin: 0 0 0.8rem 0; */
-  font-size: 1.05rem;
-  color: #eef5ff;
-  font-weight: 400;
-  padding: 28px 30px;
-}
-.narrative-line1::after {
-  content: "";
-  position: absolute;
-  inset: -2px;
-  background: conic-gradient(from var(--angle), #d1afaf, #7a7a7a, #d6baba);
-  z-index: -1;
-  border-radius: 12px;
-  animation: movingBorder 3s linear infinite;
-}
-.narrative-card .narrative-line span.narrative-title{
-  font-weight: 600;
-  font-size: 1.12rem;
-}
-
-
 .card {
   background: linear-gradient(
     135deg,
@@ -365,7 +333,8 @@ header {
 }
 
 .card1 {
-  right: 10%;
+  left: 5%;
+  top: 35%;
   animation: floaty 2s ease-in infinite alternate;
 }
 .card2 {
@@ -374,8 +343,8 @@ header {
   animation: floaty 2s ease-out infinite alternate-reverse;
 }
 .card3 {
-  top: 30%;
-  right: 25%;
+  left: 4%;
+  bottom: 15%;
   animation: floaty 2s ease-in-out infinite alternate;
 }
 .card4 {
@@ -399,46 +368,51 @@ header {
 }
 .card8 {
   top: 80%;
-  animation: floaty 2s cubic-bezier(0.55, 0.055, 0.675, 0.19) infinite alternate-reverse;
+  animation: floaty 2s cubic-bezier(0.55, 0.055, 0.675, 0.19) infinite
+    alternate-reverse;
 }
 .card9 {
   top: 60%;
   left: 25%;
   animation: floaty 2s cubic-bezier(0.215, 0.61, 0.355, 1) infinite alternate;
 }
-.card10{
+.card10 {
   top: 35%;
   left: 35%;
   animation: floaty 2s cubic-bezier(0.895, 0.03, 0.685, 0.22) infinite alternate;
 }
-.card11{
-  top: 40%;
-  left: 50%;
+.card11 {
+  top: 36%;
+  left: 58%;
   animation: floaty 2s cubic-bezier(0.165, 0.84, 0.44, 1) infinite alternate;
 }
-.card12{
+.card12 {
   top: 55%;
   left: 40%;
   animation: floaty 2s cubic-bezier(0.55, 0.085, 0.68, 0.53) infinite alternate;
 }
-.card13{
+.card13 {
   top: 75%;
   left: 15%;
-  animation: floaty 2s cubic-bezier(0.6, 0.04, 0.98, 0.335) infinite alternate-reverse;
+  animation: floaty 2s cubic-bezier(0.6, 0.04, 0.98, 0.335) infinite
+    alternate-reverse;
 }
-.card14{
+.card14 {
   top: 70%;
   left: 33%;
-  animation: floaty 2s cubic-bezier(0.33, 0.7, 0.45, 1) infinite alternate-reverse;
+  animation: floaty 2s cubic-bezier(0.33, 0.7, 0.45, 1) infinite
+    alternate-reverse;
 }
-.card15{
+.card15 {
   top: 90%;
   left: 30%;
-  animation: floaty 2s cubic-bezier(0.215, 0.61, 0.355, 1) infinite alternate-reverse;
+  animation: floaty 2s cubic-bezier(0.215, 0.61, 0.355, 1) infinite
+    alternate-reverse;
 }
 
+/* Section 4 - The Rise */
 
-
-
-
-
+#section4-tagline {
+  color: #5c5c5c;
+  text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.2);
+}
