--- a/static/style.css
+++ b/static/style.css
@@ -79,7 +79,6 @@ h6 {
 }
 /* Global */
 .section {
-  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -131,7 +130,17 @@ h6 {
   padding: 30px;
   text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.2);
 }
-
+.wrapper{
+  overflow-x: hidden;
+  position: relative;
+  min-height: 100vh;
+  width: 100%;
+}
+.scrollPanel{
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 header {
   position: relative;
 
@@ -186,17 +195,12 @@ header {
 }
 /* Section 2 */
 #section2 {
+  position: relative;
   background: url(./images/section2/cloud.png) repeat-x;
   background-position: 0 bottom;
   background-size: auto 350px;
 
-  animation-name: moveBg, fadeOut;
-  animation-duration: 100s, 1s;
-  animation-timing-function: linear, linear;
-  animation-iteration-count: infinite, 1;
-  animation-fill-mode: none, both;
-  animation-timeline: auto, view();
-  animation-range: normal, entry 100% cover 90%;
+  animation: moveBg 100s linear infinite alternate;
 }
 #section2-narrative-card-text {
   padding: 1rem;
@@ -252,40 +256,20 @@ header {
 
 /* Section 3 - The Struggles */
 #section3 {
-  position: relative;
-  color: #fff;
+  /* color: #fff; */
 
-  background: url(./images/section3/background.jpg) no-repeat;
+  /* background: url(./images/section3/background.jpg) no-repeat; */
 
   background-position: bottom;
   background-size: cover;
-
+  background: linear-gradient(135deg, #fafcfd, #e0e0e0, #dedede);
+/* 
   animation: fadeIn linear both;
   animation-timeline: view();
-  animation-range: entry 0% cover 30%;
+  animation-range: entry 0% cover 30%; */
 }
 
-#section3::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(
-    135deg,
-    rgba(0, 0, 0, 0.719),
-    rgba(42, 42, 61, 0.8),
-    rgba(0, 0, 0, 0.9)
-  );
 
-  background-size: 200% 200%;
-
-  animation: gradientShift 15s ease-in-out infinite;
-
-  pointer-events: none;
-  z-index: -1;
-}
 #section3-content {
   position: absolute;
   padding: 30px;
@@ -295,7 +279,7 @@ header {
 }
 #section3-title {
   color: #fff;
-  text-shadow: 2px 4px 2px #ffffff50;
+  /* text-shadow: 2px 4px 2px #ffffff50; */
 }
 #section3-heading {
   position: relative;
@@ -483,3 +467,12 @@ header {
 }
 
 
+#section3{
+ background: black;
+}
+#section4{
+  background: purple;
+}
+#section5{
+  background: orange;
+}
