--- a/static/style.css
+++ b/static/style.css
@@ -91,10 +91,6 @@ h6 {
 .section-heading {
   align-self: flex-start;
   margin-bottom: auto;
-
-  animation: appear 1ms linear;
-  animation-timeline: view();
-  animation-range: entry 0% cover 40%;
 }
 .title {
   font-size: 3rem;
@@ -110,18 +106,13 @@ h6 {
   position: absolute;
   letter-spacing: 0.1px;
   align-self: flex-end;
-
   right: 5vw;
   bottom: 15%;
   border-radius: 7px;
-  animation: TextAppear both;
-  animation-timeline: view();
-  animation-range: entry 20% cover 30%;
 }
 
 /* Header / Section 1 */
 #logo {
-  font-family: poppins;
   font-size: 1.5rem;
   font-weight: 700;
   position: absolute;
@@ -130,13 +121,28 @@ h6 {
   padding: 30px;
   text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.2);
 }
-.wrapper{
-  overflow-x: hidden;
+.card {
+  color: #bfe1ff;
+  padding: 10px 14px;
+  border-radius: 8px;
+  font-size: 0.92rem;
+  width: max-content;
+  transform: translateY(0);
+  position: absolute;
+  cursor: pointer;
+  animation: floaty 2s ease-in-out infinite alternate;
+}
+.card span {
+  position: relative;
+  z-index: 1;
+}
+.wrapper {
+  overflow: hidden;
   position: relative;
   min-height: 100vh;
   width: 100%;
 }
-.scrollPanel{
+.scrollPanel {
   position: absolute;
   top: 0;
   left: 0;
@@ -202,11 +208,12 @@ header {
 
   animation: moveBg 100s linear infinite alternate;
 }
+/* narrative card */
 #section2-narrative-card-text {
   padding: 1rem;
   font-size: 1.2rem;
   border-radius: 7px;
-  border : 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   text-shadow: 2px 4px 4px rgb(255, 255, 255);
 }
 #section2-narrative-card-text::after {
@@ -256,20 +263,8 @@ header {
 
 /* Section 3 - The Struggles */
 #section3 {
-  /* color: #fff; */
-
-  /* background: url(./images/section3/background.jpg) no-repeat; */
-
-  background-position: bottom;
-  background-size: cover;
-  background: linear-gradient(135deg, #fafcfd, #e0e0e0, #dedede);
-/* 
-  animation: fadeIn linear both;
-  animation-timeline: view();
-  animation-range: entry 0% cover 30%; */
+  background: #272626;
 }
-
-
 #section3-content {
   position: absolute;
   padding: 30px;
@@ -279,7 +274,7 @@ header {
 }
 #section3-title {
   color: #fff;
-  /* text-shadow: 2px 4px 2px #ffffff50; */
+  text-shadow: -2px 4px 4px #272626, -2px 4px 4px rgba(255, 255, 255, 0.3);
 }
 #section3-heading {
   position: relative;
@@ -288,26 +283,57 @@ header {
   position: absolute;
   font-family: monospace;
   letter-spacing: 1px;
-  color: #ffffff;
+  color: #d60b0be0;
+  text-shadow: 0px 7px 7px rgb(0, 0, 0);
 }
-
-.card {
+/* floaty cards */
+#section3 .card {
+  color: #ffffff8a;
   background: linear-gradient(
     135deg,
-    rgba(255, 255, 255, 0.04),
+    rgba(170, 80, 80, 0.04),
     rgba(255, 255, 255, 0.02)
   );
   border: 1px solid rgba(255, 255, 255, 0.06);
-  color: #bfe1ff;
-  padding: 10px 14px;
-  border-radius: 8px;
-  font-size: 0.92rem;
-  width: max-content;
-  box-shadow: 0 6px 4px rgba(8, 14, 30, 0.5);
-  transform: translateY(0);
+  box-shadow: 0 7px 4px rgba(0, 0, 0, 0.1);
+}
+#section3 .card::before{
+  content: "";
   position: absolute;
-
-  animation: floaty 2s ease-in-out infinite alternate;
+  left: 0;
+  bottom: 0;
+  height: 0;
+  width: 100%;
+  background: #ff0000;
+  transition: all 0.3s ease;
+  border-radius: 8px;
+  z-index: 1;
+}
+#section3 .card:hover::before{
+  height: 100%;
+}
+#section3 .card:hover{
+  color: #fff;
+  font-weight: 600;
+  box-shadow: 2px 2px 50px rgba(255, 0, 0, 0.5);
+}
+/* narrative card */
+#section3-narrative-card {
+  border: 1px solid #ffffff1a;
+  padding: 1rem;
+  color: #fff;
+  background: #272626;
+  cursor: pointer;
+  box-shadow: 2px 2px 50px rgba(255, 0, 0, 0.1), 4px 10px 10px rgba(0, 0, 0, 0.2);
+}
+#section3-narrative-card::after{
+  content: "";
+  position: absolute;
+  inset: -2px;
+  border-radius: 7px;
+  background: conic-gradient(from var(--angle), red , #272626, red);
+  animation: movingBorder 3s linear infinite;
+  z-index: -1;
 }
 
 .card1 {
@@ -397,82 +423,78 @@ header {
   line-height: 2;
   font-family: monospace;
 }
-.section4-tagline1{
+.section4-tagline1 {
   transform: translateY(60px);
 }
-.section4-tagline2{
+.section4-tagline2 {
   transform: translateX(250px) translateY(215px);
 }
-.section4-tagline3{
+.section4-tagline3 {
   transform: translateY(300px);
 }
 
-#section4 .card{
+#section4 .card {
   color: #000000;
   right: 0;
   /* animation: stairFloaty 2s ease-in-out alternate infinite; */
 }
-.Rcard1{
+.Rcard1 {
   bottom: 5%;
   left: 3%;
   animation: stairFloaty 2s ease-in-out alternate infinite;
 }
-.Rcard2{
+.Rcard2 {
   bottom: 12%;
   left: 13%;
   animation: stairFloaty 2s ease-in-out alternate infinite;
   animation-delay: 2s;
 }
-.Rcard3{
+.Rcard3 {
   bottom: 20%;
   left: 20%;
   animation: stairFloaty 2s ease-in-out alternate infinite;
   animation-delay: 4s;
 }
-.Rcard4{
+.Rcard4 {
   bottom: 29%;
   left: 31%;
   animation: stairFloaty 2s ease-in-out alternate infinite;
   animation-delay: 6s;
 }
-.Rcard5{
+.Rcard5 {
   bottom: 37%;
   left: 44%;
   animation: stairFloaty 2s ease-in-out alternate infinite;
   animation-delay: 8s;
 }
-.Rcard6{
+.Rcard6 {
   bottom: 45%;
   left: 36%;
   animation: stairFloaty 2s ease-in-out alternate infinite;
   animation-delay: 10s;
 }
-.Rcard7{
+.Rcard7 {
   bottom: 55%;
   left: 28%;
   animation: stairFloaty 2s ease-in-out alternate infinite;
   animation-delay: 12s;
 }
-.Rcard8{
+.Rcard8 {
   bottom: 65%;
   left: 20%;
   animation: stairFloaty 2s ease-in-out alternate infinite;
   animation-delay: 14s;
 }
-.Rcard9{
+.Rcard9 {
   bottom: 75%;
   left: 9%;
   animation: stairFloaty 2s ease-in-out alternate infinite;
   animation-delay: 16s;
 }
 
-
-#section3{
- background: black;
-}
-#section4{
+#section4 {
   background: purple;
 }
-#section5{
+#section5 {
   background: orange;
 }
