--- a/static/style.css
+++ b/static/style.css
@@ -105,21 +105,13 @@ h6 {
   line-height: 1.6;
   position: absolute;
   letter-spacing: 0.1px;
+  border-radius: 7px;
+}
+#section3-narrative-card,
+#section4-narrative-card {
   align-self: flex-end;
   right: 5vw;
   bottom: 15%;
-  border-radius: 7px;
-}
-
-/* Header / Section 1 */
-#logo {
-  font-size: 1.5rem;
-  font-weight: 700;
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 30px;
-  text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.2);
 }
 .card {
   color: #bfe1ff;
@@ -146,6 +138,17 @@ h6 {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+/* Header / Section 1 */
+#logo {
+  font-size: 1.5rem;
+  font-weight: 700;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 30px;
+  text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.2);
 }
 header {
   position: relative;
@@ -543,7 +546,48 @@ header {
   animation: stairFloaty 2s ease-in-out alternate infinite;
   animation-delay: 16s;
 }
-
+/* Section 5 - The Vision */
 #section5 {
-  background: orange;
+background: linear-gradient(to right, #f0f2f0, #000c40);
+}
+#section5-narrative-card {
+  border: 1px solid rgba(255, 255, 255, 0.342);
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+  background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(10px);
+  border-radius: 12px;
+  padding: 1.5rem 2rem;
+  max-width: 650px;
+  margin: 0 auto;
+  font-size: 1.15rem;
+  line-height: 1.6;
+  color: #111;
+  z-index: 1;
+}
+#section5::before {
+  content: "";
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 600px;
+  height: 600px;
+  background: radial-gradient(circle, rgba(112, 142, 224, 0.4), transparent 70%);
+  border-radius: 50%;
+  filter: blur(100px);
+}
+.vision-horizon {
+  position: absolute;
+  bottom: 25%;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(
+    90deg,
+    transparent,
+    rgba(255, 255, 255, 0.6),
+    transparent
+  );
+  filter: blur(2px);
+  z-index: 0;
 }
