--- a/static/animation.css
+++ b/static/animation.css
@@ -11,7 +11,6 @@
     opacity: 1;
   }
 }
-
 @keyframes movingBorder {
   from {
     --angle: 0deg;
@@ -20,7 +19,6 @@
     --angle: 360deg;
   }
 }
-
 @keyframes moveBg {
   from {
     background-position: 0% bottom;
@@ -29,8 +27,6 @@
     background-position: -2000px bottom;
   }
 }
-
-
 @keyframes floaty {
   0% {
     transform: translateY(0);
@@ -42,7 +38,6 @@
     transform: translateY(-20px);
   }
 }
-
 @keyframes stairFloaty {
   from {
     transform: translateY(0);
@@ -50,4 +45,21 @@
   to {
     transform: translateY(-10px);
   }
+}
+@keyframes rotateBack {
+  to{
+    transform: scale(1) rotate(-360deg);
+  }
+}
+@keyframes rotate{
+  to{
+    transform: scale(1.3) rotate(360deg);
+  }
+}
+.rotate{
+  animation: rotate .5s 1 both;
+  
+}
+.rotateBack{
+  animation: rotateBack .5s 1 both;
 }
